--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <div class="px-4 py-5 sm:px-6 flex justify-between">
         <div>
           <h1 class="text-xl leading-6 font-bold text-gray-900">
-            Jhonny Beltran Hernandez
+            Joet Gonzalez
           </h1>
-          <h2 class="text-sm leading-6 text-gray-500 -mt-1">@JhonnyBeltran</h2>
+          <h2 class="text-sm leading-6 text-gray-500 -mt-1">@Joet Gonzalez</h2>
           <p class="mt-1 max-w-2xl text-sm text-gray-500">
             Desarrollador Full Stack #JavaScript #React 
          
@@ -24,7 +24,7 @@
         </div>
         <div>
           <img class="rounded-lg w-48" src="https://res.cloudinary.com/dc04oiqvh/image/upload/v1662461062/perfil_mtzzhy.png"
-            alt="Jhonny Beltran" />
+            alt="Joet Gonzalez" />
         </div>
       </div>
       <div class="border-t border-gray-200">
