--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Jhonny Beltran</title>
+  <title>Joet Gonzalez</title>
   <link href="https://res.cloudinary.com/dc04oiqvh/image/upload/v1651703014/03_pafv99.png" rel="icon" type="image/png" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -23,7 +23,7 @@
           </p>
         </div>
         <div>
-          <img class="rounded-lg w-48" src="https://res.cloudinary.com/dc04oiqvh/image/upload/v1662461062/perfil_mtzzhy.png"
+          <img class="rounded-lg w-48" src="https://res.cloudinary.com/dh8v3aq3u/image/upload/v1662469868/A/WhatsApp_Image_2022-07-04_at_5.13.04_PM_xpgfpy.jpg"
             alt="Joet Gonzalez" />
         </div>
       </div>
