--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Joet Gonzalez</title>
-  <link href="https://res.cloudinary.com/dc04oiqvh/image/upload/v1651703014/03_pafv99.png" rel="icon" type="image/png" />
+  <link href="https://res.cloudinary.com/dh8v3aq3u/image/upload/v1662469868/A/WhatsApp_Image_2022-07-04_at_5.13.04_PM_xpgfpy.jpg" rel="icon" type="image/png" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
